<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        layout="@layout/activity_passwordrecovery_head" />

    <FrameLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <RelativeLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="left|top"
            android:id="@+id/pass_recovery_enter"
            android:visibility="gone">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/password_recover1"
                android:id="@+id/pass_recovery1"
                android:gravity="center|center_horizontal"
                android:padding="15sp"
                android:layout_above="@+id/pass_email_mob"
                android:layout_centerHorizontal="true" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:ems="10"
                android:id="@+id/pass_email_mob"
                android:layout_centerVertical="true"
                android:layout_alignLeft="@+id/pass_recovery1"
                android:layout_alignStart="@+id/pass_recovery1"
                android:layout_alignRight="@+id/pass_recovery1"
                android:layout_alignEnd="@+id/pass_recovery1" />
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/password_recovery1_bt"
                android:id="@+id/bt_pass_back1"
                android:background="@mipmap/button_common"
                android:textColor="@color/colorWhite"
                android:layout_below="@+id/pass_email_mob"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="41dp" />
        </RelativeLayout>
        <RelativeLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:id="@+id/pass_recovery_back"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/password_recovery2"
                android:id="@+id/pass_recovery2"
                android:gravity="center|center_horizontal"
                android:padding="15sp"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginTop="143dp" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/password_recovery2_bt"
                android:id="@+id/bt_pass_back"
                android:background="@mipmap/button_common"
                android:textColor="@color/colorWhite"
                android:layout_below="@+id/pass_recovery2"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="46dp" />
        </RelativeLayout>
    </FrameLayout>
</LinearLayout>