<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:id="@+id/scrollView2" >
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:weightSum="1"
        android:background="#FFFFFF">

        <ImageButton
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:id="@+id/imageButton"
            android:src="@mipmap/arrow_appbar"
            android:background="@color/transparant" />

        <TextView
            android:layout_width="204dp"
            android:layout_height="match_parent"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/new_account"
            android:id="@+id/textView4"
            android:gravity="center_vertical|center"
            android:textColor="@color/colorPrimary"
            android:layout_weight="0.59"
            android:textSize="15sp" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:id="@+id/social">

        <include
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            layout="@layout/social_ll" />
    </LinearLayout>
   <RelativeLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content">
       <View
           android:id="@+id/SplitLine_hor1"
           android:layout_width="fill_parent"
           android:layout_height= "2dp"
           android:background="@color/colorAccent"
           android:layout_centerVertical="true"
           android:layout_toStartOf="@+id/textView5"
           android:layout_marginRight="10dp" />

       <TextView
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="OR"
           android:id="@+id/textView5"
           android:layout_centerHorizontal="true"
           android:gravity="center_vertical|center"
           android:textColor="#A9A9A9"
           android:textSize="15sp"
           android:layout_alignParentTop="true"
           android:textStyle="bold"/>
       <View
           android:id="@+id/SplitLine_hor2"
           android:layout_width="fill_parent"
           android:layout_height= "2dp"
           android:background="@color/colorAccent"
           android:layout_centerVertical="true"
           android:layout_alignParentRight="true"
           android:layout_alignParentEnd="true"
           android:layout_toRightOf="@+id/textView5"
           android:layout_toEndOf="@+id/textView5"
           android:layout_marginLeft="10dp" />
   </RelativeLayout>
    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_name"
        style="@style/BlueHintText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_10dp"
        android:layout_marginLeft="@dimen/_20dp"
        android:layout_marginRight="@dimen/_20dp"
        android:layout_marginTop="@dimen/_5dp">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/name"
        android:layout_gravity="center_horizontal"
        android:inputType="text"
        android:hint="@string/company_name"
        android:layout_margin="10dp"
        android:padding="10dp" />
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_email"
        style="@style/BlueHintText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_10dp"
        android:layout_marginLeft="@dimen/_20dp"
        android:layout_marginRight="@dimen/_20dp">
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/email"
        android:layout_gravity="center_horizontal"
        android:inputType="text"
        android:hint="@string/mob_email"
        android:layout_margin="10dp"
        android:padding="10dp" />
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_password"
        style="@style/BlueHintText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_10dp"
        android:layout_marginLeft="@dimen/_20dp"
        android:layout_marginRight="@dimen/_20dp">
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/password"
        android:layout_gravity="center_horizontal"
        android:inputType="textPassword"
        android:hint="@string/password"
        android:layout_margin="10dp"
        android:padding="10dp" />
</android.support.design.widget.TextInputLayout>
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="108dp"
        android:layout_gravity="center_horizontal"
        android:gravity="bottom">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center_vertical|center">
            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:gravity="center_vertical|center">

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/radioButton" />
            </RadioGroup>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/terms_condition"
                android:id="@+id/terms"
                android:layout_gravity="center_horizontal"
                android:textSize="14sp"
                android:gravity="center_vertical|center"
                android:layout_marginBottom="2dp" />
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="60dp">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/create_account1"
                android:id="@+id/bt_createAccount"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:background="@mipmap/button_common"
                android:textColor="@color/colorWhite" />
        </RelativeLayout>
    </LinearLayout>

</LinearLayout>
    </ScrollView>