<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <android.support.design.widget.TextInputLayout
        android:id="@+id/TextInputLayoutname_contact"
        style="@style/AddressGrayHintText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginLeft="19.5dp"
        android:layout_marginRight="17.5dp"
        android:background="@drawable/edittext_bottom_line"
        android:layout_marginTop="37.5dp">

        <tripin.com.tripin_shipper.widget.EditTextViewLatoRegular
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/name_contact"

            android:inputType="text"
            android:hint="@string/name_of_contact_person"

            android:textSize="15sp"
            android:textColor="@color/Add_address_text"
            android:background="@color/transparant"
            android:paddingBottom="5dp"
            android:paddingTop="5dp" />
    </android.support.design.widget.TextInputLayout>
    <ImageButton
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:id="@+id/bt_contact"
        android:layout_gravity="right"
        android:src="@mipmap/contact_bt"
        android:background="@color/transparant"
        android:layout_alignBottom="@+id/TextInputLayoutname_contact"
        android:layout_alignRight="@+id/TextInputLayoutname_contact"
        android:layout_alignEnd="@+id/TextInputLayoutname_contact"

        android:layout_marginTop="30.5dp"
        android:layout_marginBottom="2.5dp"
        android:layout_marginLeft="284.5dp"
        android:layout_marginRight="3.5dp" />
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="2dp"
        android:weightSum="1"
        android:layout_marginTop="97.5dp"
        android:layout_marginLeft="19.5dp"
        android:layout_marginRight="17.5dp">
        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_mobile"
            style="@style/AddressGrayHintText"
            android:layout_width="121dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.50"
            android:background="@drawable/edittext_bottom_line"
            android:layout_marginBottom="3dp">

            <tripin.com.tripin_shipper.widget.EditTextViewLatoRegular
                android:layout_width="121dp"
                android:layout_height="match_parent"
                android:id="@+id/mobile"
                android:hint="@string/mobile"
                android:textSize="15sp"
                android:layout_marginLeft="@dimen/_4dp"
                android:layout_marginBottom="5dp"
                android:inputType="phone"
                android:textColor="@color/Add_address_text"
                android:background="@color/transparant"
                android:paddingTop="1dp" />
        </android.support.design.widget.TextInputLayout>
        <View
            android:id="@+id/contact_person"
            android:layout_width="21dp"
            android:layout_height= "35dp"
            android:background="@color/transparant"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_toRightOf="@+id/textView5"
            android:layout_toEndOf="@+id/textView5"
            android:layout_marginLeft="10dp"
            android:layout_weight="0.03" />
        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_landline"
            style="@style/AddressGrayHintText"
            android:layout_width="121dp"
            android:layout_height="match_parent"
            android:layout_marginBottom="3dp"
            android:layout_marginLeft="5dp"
            android:layout_gravity="right"
            android:layout_weight="0.50"
            android:background="@drawable/edittext_bottom_line">

            <tripin.com.tripin_shipper.widget.EditTextViewLatoRegular
                android:layout_width="121dp"
                android:layout_height="match_parent"
                android:id="@+id/landline"

                android:hint="@string/landline"
                android:textSize="15sp"
                android:layout_marginLeft="@dimen/_4dp"
                android:layout_marginBottom="5dp"
                android:inputType="number"
                android:textColor="@color/Add_address_text"
                android:background="@color/transparant"
                android:paddingTop="5dp" />
        </android.support.design.widget.TextInputLayout>
    </LinearLayout>
    <android.support.design.widget.TextInputLayout
        android:id="@+id/TextInputLayout_email_id"
        style="@style/AddressGrayHintText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="152.5dp"
        android:background="@drawable/edittext_bottom_line"
        android:layout_marginLeft="19.5dp"
        android:layout_marginRight="17.5dp"
        android:paddingBottom="3dp">

        <tripin.com.tripin_shipper.widget.EditTextViewLatoRegular
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/email_id"
            android:hint="@string/emailid"

            android:textSize="15sp"
            android:inputType="textEmailAddress"
            android:textColor="@color/Add_address_text"
            android:background="@color/transparant"
            android:paddingTop="5dp" />
    </android.support.design.widget.TextInputLayout>

    <tripin.com.tripin_shipper.widget.TextViewLatoRegular
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="*required fields are compulsory"
        android:id="@+id/textView9"
        android:layout_gravity="center_horizontal"
        android:textSize="12sp"
        android:layout_below="@+id/company_type"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="12dp" />

    <tripin.com.tripin_shipper.widget.TextViewLatoRegular
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/company_type"
        android:id="@+id/company_type"
        android:layout_gravity="center_horizontal|bottom"
        android:textSize="14sp"
        android:textColor="#39ceed"
        android:visibility="visible"
        android:layout_below="@+id/TextInputLayout_email_id"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10.5dp" />

    <View
        android:id="@+id/SplitLine_hor"
        android:layout_width="fill_parent"
        android:layout_height= "2dp"
        android:background="@color/colorAccent"
        android:layout_below="@+id/TextInputLayout_email_id"
        android:layout_alignLeft="@+id/name_firm"
        android:layout_alignStart="@+id/name_firm"
        android:layout_marginTop="61.5dp" />

</RelativeLayout>
