<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#ffffff">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:id="@+id/linearLayout">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="50dp"
                android:background="@color/colorSignup_login"
                android:id="@+id/ll_signup">

                <tripin.com.tripin_shipper.widget.TextViewLatoBlack
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/create_account"
                    android:id="@+id/textView"
                    android:layout_gravity="center"
                    android:gravity="center_vertical|center"
                    android:layout_weight="1"
                    android:textColor="@android:color/white" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="50dp"
                >

                <tripin.com.tripin_shipper.widget.TextViewLatoBlack
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/already_account"
                    android:id="@+id/textView2"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:gravity="center_vertical|center" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/login"
                    android:id="@+id/textView3"
                    android:layout_weight="1"
                    android:layout_gravity="left|center_vertical"
                    android:gravity="center_vertical|center"
                    android:visibility="gone"/>
            </LinearLayout>
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_above="@+id/linearLayout"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            xmlns:CircleIndicator="http://schemas.android.com/apk/res-auto" >
            <android.support.v4.view.ViewPager
                android:id="@+id/viewpager"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"></android.support.v4.view.ViewPager>
            <tripin.com.tripin_shipper.widget.CircleIndicator
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_alignBottom="@id/viewpager"
                android:id="@+id/indicator"
                CircleIndicator:ci_background="@android:color/white"
                CircleIndicator:ci_selected_background="#ffe6454a"
                CircleIndicator:ci_mode="outside"
                CircleIndicator:ci_gravity="center"
                CircleIndicator:ci_radius="10dp"
                CircleIndicator:ci_margin="5dp"
                />
        </RelativeLayout>

    </RelativeLayout>
</LinearLayout>